# robin_on_rails

./: .editorconfig  .gitignore  .gitmodules  Becoming-Bill.md  CHEATSHEET.md  README.md  Sources.md  Tech_Dashes.md  lines_to_csv.py
AI/: README.md
Ansible/: README.md
Ansible/examples/: ansible_facts_raw.json  group_names.json  groups.json  hostvars.json  inventory_hostname.json  package_facts.yaml
Assembly/: .gitignore  Addressing.md  Guide.md  NASM.md  README.md  Registers.md  build.sh  hello-world.asm  int_0x80.md
Assembly/asmtutor/: .gitignore  args.asm  build.sh  calc.asm  echo.asm  exec-cmd.asm  fizz-buzz.asm  fork.asm  func.asm  hello-world.asm  input.asm
CS/: README.md
CTF/: README.md
C_Cpp/: .clang-format  README.md
C_Cpp/code/: CMakeLists.txt
C_Cpp/code/boost_ext/: filesystem.cpp
C_Cpp/code/gtest_ext/: predicates.hpp
C_Cpp/code/programs/: boost_log.cpp  boost_process.cpp  double_delete.cpp  fp_compare.cpp
C_Cpp/code/programs/bfs/: absolute.cpp  copy_directory.cpp  file_size.cpp  is_type.cpp  path.cpp
C_Cpp/code/programs/cpp_demo/: README.md  array.cpp  chrono.cpp  exceptions.cpp  override.cpp  shared_ptr.cpp  string.cpp  string_view.cpp  type_traits.cpp  variadic.cpp  vector.cpp
C_Cpp/code/programs/file_demo/: README.md  file_exists.cpp  flagbits.cpp  read.cpp
C_Cpp/code/programs/linux_api/: rename.cpp
C_Cpp/code/programs/regex/: parse.cpp  replace.cpp
C_Cpp/code/tmpdir/: tmpdir.cpp
C_Cpp/mock/: README.md
C_Cpp/modify_const_value/: main.c
C_Cpp/values/: example_01.cpp  example_02.cpp
Cloud/: Envoy.md  README.md
Container/: README.md
Database/PostgreSQL/: README.md
DateTime/: README.md
DevOps/: Immutable-Infrastructure.md
Docker/: Best-Practices.md  Docker-Content-Trust.md  README.md
EE/: Breadboard.md  Button.md  EE.md  Jetson-AGX-Xavier.md  LED.md  Multimeter.md  RexQualis-fun-kit.md  Soldering.md  Transistor.md
EE/Pull-up/: README.md
Embedded/: LAN7800.md
Embedded/Devicetree/: README.md
Git/: README.md
Go/: Go.md  README.md  golang-notes.md
Graphviz/: Cheatsheet.dot  README.md
Hardware/: Atomic.md  Camera.md  Disk.md  Ethernet-Cables.md  README.md
Internet/: All-About-Internet.md  IPv6.md  Notes.md  README.md  RFCs.md  envoy_proxy.md  mDNS.md
Internet/Web/: README.md
Internet/network_demo/: README.md  demo_simple_hub.py  demo_simple_switch.py
Internet/ubuntu-dns-lookup/: README.md
Internet/virtual_network/: Introduction-to-Linux-interfaces-for-virtual-networking.html  README.md
JSON/: README.md
JavaScript/: README.md
JavaScript/Promise/: README.md  all_vs_allSettled.js  error-handling.js  executor-args.js  executor-no-params.js  executor-no-resolve-no-reject.js  executor-settles-but-no-then.js  prp-promise.js  prp-same-obj.js  then-chained.js  then-multicalls-reject.js  then-multicalls-resolve.js  then-reject.js  then-resolve.js  timeout.js
JavaScript/questions/: README.md
Jetson/: README.md
LaTex/: .gitignore  LaTex-Cheatsheet.tex  README.md
Lang/: README.md
Learning-to-learn/: README.md
Linux/: README.md  firewall.md  i18n.md  misc.md  tty.md
Linux/Kernel/: README.md
Linux/SquashFS/: README.md
Linux/X/: X.md  xorg.conf.md  xrandr.md
Linux/audio/: README.md
Linux/dconf/: README.md
Linux/desktop/: README.md
Linux/eBPF/: README.md
Linux/gcc/: README.md
Linux/gpg/: README.md
Linux/init/: README.md
Linux/netlink/: README.md
Linux/netlink/demo/: .gitignore  CMakeLists.txt  conv_pid.c  conv_pid.h  recv.c  send.c
Linux/packaging/: .gitignore  README.md  build.py  dpkg-ecosystem.py  reprepro.md
Linux/rsync/: rsync_demo.py
Linux/shell/: README.md
Linux/systemd/: README.md  Writing-udev-rules.html
Linux/wpa_supplicant/: wpa_supplicant.py
Makefiles/: README.md
Mathematics/: README.md
Mathematics/Linear-Algebra/: README.md
Misc/: README.md  yinwang.tar.xz
Misc/Bumblebee-bug/: README.md
PlantUML/: README.md
Protocol-Buffers/: README.md
Protocol-Buffers/cpp/: .gitignore  README.md  build.sh  main.cpp  read_struct.cpp  run.sh  tpm_private_key_provider_config.proto  tpm_provider.yml  tpm_provider_input.json  tpm_provider_input_struct.json
Protocol-Buffers/demo/: .gitignore  access_msg_fields.py  black  enums.py  maps.py  run
Protocol-Buffers/sandbox/: .gitignore  run
Python/: README.md  py3.11.sh  py3.12.sh
ROS/: README.md
Robotics/: README.md
Security/: GPG.md  LDAP.md  Misc.md  Questions.md  README.md  tools.txt
Terraform/: .gitignore  QuickGuide.md
Tools/: README.md  SSH.md  fio.md
Unicode/: README.md
Vim/: README.md
WebAssembly/: README.md
WiFi/: README.md
ai/: README.md  Thoughts.md
blockchain/: README.md
container/: README.md
cs/: README.md
devops/: Ansible.md  README.md  The-DevOps-Handbook.md
encoding/: README.md
english/: Purdue_OWL.md  README.md
games/: README.md
git/: README.md
hardware/: README.md
internet/: Notes.md  README.md  RFCs.md
kubernetes/: README.md
lang/: README.md
lang/c_cpp/code/: CMakeLists.txt  README.md
lang/c_cpp/code/boost_ext/: filesystem.hpp
lang/c_cpp/code/file/: file.cpp  file.hpp
lang/c_cpp/code/gtest_ext/: predicates.cpp
lang/c_cpp/code/programs/: bfs.cpp  bfs_path_gtest_crash.cpp  json.cpp
lang/c_cpp/code/programs/bfs/: bfs.cpp  create_directory.cpp  directory_iterator.cpp  path.cpp  relative.cpp  rename.cpp
lang/c_cpp/code/programs/cpp_demo/: array.cpp  iterator.cpp  thread.cpp
lang/c_cpp/code/programs/linux_api/: open.cpp  rename.cpp
lang/c_cpp/code/programs/regex/: replace.cpp
lang/c_cpp/code/tmpdir/: tmpdir.cpp  tmpdir.hpp
linux/: README.md  X.md  firewall.md  misc.md  tty.md
linux/packaging/demo/src/: CMakeLists.txt  Demo.cpp  Demo.hpp  SemVer.cpp  demo
microservices/: README.md
mining/: README.md
misc/: GreenEnergy.md  Physics.md  README.md
network/: README.md  RFCs.md  unix-and-linux-admin-handbook-4th.md
security/: Cross-Domain-Security.md  Misc.md  OpenPGP.md  README.md  Security_Testing.md
ssh-certificate-auth/: README.md
tools/: SSH.md
unicode/: README.md
web/: README.md
xml/: xml_dom.py
(+396 files in other folders)
